--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="gryffindor.png" alt="logo da gryffindor">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item"><a href="#escola">Escola</a></li>
             <li class="cabecalho-lista-item"><a href="#estudante">Estudante</a></li>
@@ -23,12 +23,11 @@
     <section id="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a Escola</h2>
-            <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento
-                Computacional, através do ensino de Programação.</p>
-            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a
-                turma favorita por todos os professores e professoras que nos ajudam!</p>
+            <p class="escola-texto-um">  A escola gryffindor foi fundada a muito anos 932 na idade media.</p>
+            <p class="escola-texto-dois">Hoje não é mais especialista em magia mas tem muita gente famosa.
+                a turma mais famosa é a 2 serie B.È uma turma inteligente, dedicada, com metas e muito famosa.</p>
         </div>
-        <img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
+        <img class="escola-imagem" src="professora.png" alt="imagem que representa uma professora em sala de aula">
     </section>
 
     <section id="estudante">
@@ -36,7 +35,7 @@
         <div class="estudante-todos">
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="dayve jones.png" alt="foto do dayve jones">
+                <img class="estudante-imagem" src="davy jones.png" alt="foto do dayve jones">
                 <h3 class="estudante-nome">dayve jones</h3>
                 <a href="https://github.com/dayvejones"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
@@ -46,7 +45,7 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="nal do canal.jpg" alt="foto do nal do canal">
+                <img class="estudante-imagem" src="nal do canal.png" alt="foto do nal do canal">
                 <h3 class="estudante-nome">nal do canal</h3>
                 <a href="https://github.com/nal do canalM-L"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
@@ -68,7 +67,7 @@
             <span></span>
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Gretchen.jpg" alt="foto da Gretchen">
+                <img class="estudante-imagem" src="Gretchen.png" alt="foto da Gretchen">
                 <h3 class="estudante-nome">Gretchen</h3>
                 <a href="https://github.com/gretchen"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
@@ -78,7 +77,7 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="ednaldo perreira.jpg" alt="foto do ednaldo perreira">
+                <img class="estudante-imagem" src="ednaldo perreira.png" alt="foto do ednaldo perreira">
                 <h3 class="estudante-nome">ednaldo perreira</h3>
                 <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
@@ -109,7 +108,7 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="fellipe netto" alt="foto do fellipe netto">
+                <img class="estudante-imagem" src="fellipe netto.png" alt="foto do fellipe netto">
                 <h3 class="estudante-nome">fellipe netto</h3>
                 <a href="https://github.com/fellipe netto"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
