--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="gryffindor.png" alt="logo da gryffindor">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item"><a href="#escola">Escola</a></li>
-            <li class="cabecalho-lista-item"><a href="#estudante">Estudante</a></li>
+            <li class="cabecalho-lista-item"><a href="#escola">gryffindor</a></li>
+            <li class="cabecalho-lista-item"><a href="#estudante">2° B</a></li>
         </ul>
     </header>
     <section id="escola">
@@ -37,90 +37,52 @@
             <div class="estudante-div">
                 <img class="estudante-imagem" src="davy jones.png" alt="foto do dayve jones">
                 <h3 class="estudante-nome">dayve jones</h3>
-                <a href="https://github.com/dayvejones"><img class="estudante-icone" src="github.png"
-                        alt="icone github"></a>
-                <a href="https://linkedin.com/dayvejones"><img class="estudante-icone" src="linkedin.png"
-                        alt="icone linkedin"></a>
-                <a href="https://instagram.com/dayvejones"><img class="estudante-icone" src="instagram.png"
-                        alt="icone instagram"></a>
+                <a href="https://pt.wikipedia.org/wiki/Davy_Jones_(youtuber)"><img class="estudante-icone" src="wikipedia.png"
+                        alt="link para a wikipedia"></a>
             </div>
             <div class="estudante-div">
                 <img class="estudante-imagem" src="nal do canal.png" alt="foto do nal do canal">
                 <h3 class="estudante-nome">nal do canal</h3>
-                <a href="https://github.com/nal do canalM-L"><img class="estudante-icone" src="github.png"
-                        alt="icone github"></a>
-                <a href="https://www.linkedin.com/in/nal do canal-marcomini-de-lima/"><img class="estudante-icone"
-                        src="linkedin.png" alt="icone linkedin"></a>
-                <a href="https://www.instagram.com/nal do canal/"><img class="estudante-icone" src="instagram.png"
-                        alt="icone instagram"></a>
+                <a href="https://desciclopedia.org/wiki/Nal_do_Canal"><img class="estudante-icone" src="wikipedia.png"
+                        alt="link para a wikipedia"></a>
             </div>
             <div class="estudante-div">
                 <img class="estudante-imagem" src="naldo.png" alt="foto do naldo">
                 <h3 class="estudante-nome">Naldo</h3>
-                <a href="https://github.com/naldo"><img class="estudante-icone" src="github.png"
-                        alt="icone github"></a>
-                <a href="https://www.linkedin.com/in/naldo/"><img class="estudante-icone"
-                        src="linkedin.png" alt="icone linkedin"></a>
-                <a href="https://www.instagram.com/naldolm"><img class="estudante-icone" src="instagram.png"
-                        alt="icone instagram"></a>
+                <a href="https://pt.wikipedia.org/wiki/Naldo_Benny"><img class="estudante-icone" src="wikipedia.png"
+                        alt="Link para a Wikipedia"></a>
             </div>
             <span></span>
             <span></span>
             <div class="estudante-div">
                 <img class="estudante-imagem" src="Gretchen.png" alt="foto da Gretchen">
                 <h3 class="estudante-nome">Gretchen</h3>
-                <a href="https://github.com/gretchen"><img class="estudante-icone" src="github.png"
-                        alt="icone github"></a>
-                <a href="https://www.linkedin.com/in/Gretchen/"><img class="estudante-icone" src="linkedin.png"
-                        alt="icone linkedin"></a>
-                <a href="https://www.instagram.com/Gretchen/"><img class="estudante-icone" src="instagram.png"
-                        alt="icone instagram"></a>
+                <a href="https://pt.wikipedia.org/wiki/Gretchen"><img class="estudante-icone" src="wikipedia.png"
+                        alt="link para a wikipedia"></a>
             </div>
             <div class="estudante-div">
                 <img class="estudante-imagem" src="ednaldo perreira.png" alt="foto do ednaldo perreira">
                 <h3 class="estudante-nome">ednaldo perreira</h3>
-                <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png"
-                        alt="icone github"></a>
-                <a href="https://www.linkedin.com/in/ednaldo perreira"><img class="estudante-icone" src="linkedin.png"
-                        alt="icone linkedin"></a>
-                <a href="https://www.instagram.com/ednaldo perreira/"><img class="estudante-icone" src="instagram.png"
-                        alt="icone instagram"></a>
+                <a href="https://desciclopedia.org/wiki/Ednaldo_Pereira"><img class="estudante-icone" src="wikipedia.png"
+                        alt="link para a wikipedia"></a>
             </div>
             <div class="estudante-div">
                 <img class="estudante-imagem" src="gaymesedu.png" alt="foto do GamesEduu">
                 <h3 class="estudante-nome">GamesEduu</h3>
-                <img class="estudante-icone" src="github.png" alt="icone github">
-                <a href="https://www.linkedin.com/in/GamesEduu/"><img class="estudante-icone" src="linkedin.png"
-                        alt="icone linkedin"></a>
-                <a href="https://github.com/GamesEduu"><img class="estudante-icone" src="instagram.png"
-                        alt="icone instagram"></a>
+                <a href="https://pt.wikipedia.org/wiki/Games_EduUu"><img class="estudante-icone" src="wikipedia.png"
+                        alt="link para a wikipedia"></a>
             </div>
             <span></span>
             <span></span>
             <div class="estudante-div">
                 <img class="estudante-imagem" src="leu lins.png" alt="foto do leu lins">
                 <h3 class="estudante-nome">leu lins</h3>
-                <a href="https://github.com/leu lins"><img class="estudante-icone" src="github.png"
-                        alt="icone github"></a>
-                <a href="http://linkedin.com/in/leu lins"><img class="estudante-icone"
-                        src="linkedin.png" alt="icone linkedin"></a>
-                <a href="placeholder"><img class="estudante-icone" src="instagram.png"
-                        alt="icone instagram"></a>
-            </div>
-            <div class="estudante-div">
-                <img class="estudante-imagem" src="fellipe netto.png" alt="foto do fellipe netto">
-                <h3 class="estudante-nome">fellipe netto</h3>
-                <a href="https://github.com/fellipe netto"><img class="estudante-icone" src="github.png"
-                        alt="icone github"></a>
-                <a href="placeholder"><img class="estudante-icone"
-                        src="linkedin.png" alt="icone linkedin"></a>
-                <a href="placeholder"><img class="estudante-icone" src="instagram.png"
-                        alt="icone instagram"></a>
+                <a href="https://pt.wikipedia.org/wiki/Leo_Lins"><img class="estudante-icone" src="wikipedia.png"
+                        alt="link para a wikipedia"
             </div>
 
-        </div>
     </section>
-    
+
     <footer class="rodape">
         <img class="rodape-imagem" src="alurastart logo.png" alt="logo da alura start">
     </footer>
